--- a/src/app/agenda/agenda.component.css
+++ b/src/app/agenda/agenda.component.css
@@ -1,6 +1,6 @@
 .bg {
-    /* The image used
-    background-image: url("../../assets/images/background/5.png");
+    /* The image used */
+    background-image: url("../../assets/images/background/1.png");
   
     /* Full height */
     height: 100%;
@@ -10,5 +10,14 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  h3 {
+ 
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    color: white;
   }
   
