--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -4,8 +4,8 @@ body {
 }
 
 .bg {
-  /* The image used 
-  background-image: url("../../assets/images/background/2.png");
+  /* The image used */
+  background-image: url("../../assets/images/background/1.png");
 
   /* Full height */
   height: 100%;
