--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -1,5 +1,5 @@
 .bg {
-    /* The image used 
+    /* The image used */
     background-image: url("../../assets/images/background/1.png");
   
     /* Full height */
@@ -19,5 +19,13 @@ img {
 .gallery {
   display: flex;
   flex-wrap: wrap;
+}
 
+h3 {
+ 
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  color: white;
 }
