--- a/src/app/purpose/purpose.component.css
+++ b/src/app/purpose/purpose.component.css
@@ -12,3 +12,11 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  h3 {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    color: white;
+  }
