--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,15 +7,27 @@
 
 		</div>
 
-		<!--<div class="row justify-content-center align-items-center">-->
-			<div class="row">
-				<div class="col">
-					<a routerLink="/purpose"><img class="rounded dash_img" src="https://image.flaticon.com/icons/png/512/1660/1660164.png">
+		<br>
+		<br>
+
+		<div class="row">
+			<div class="col">
+				<div class="row justify-content-center align-items-center">
+					<a routerLink="/purpose" align="center"><img class="rounded_dash_img" src="../assets/images/icons/info.png">
 						<br><small>About</small>
 					</a>
 				</div>
-				<div class="col">
-					<a routerLink="/location"><img class="rounded dash_img" src="https://cdn3.droom.in/photos/images/web/beta/images/icons/search-amp/location.svg">
+			</div>
+		</div>
+
+		<br>
+		<br>
+		<br>
+		
+		<div class="row">
+			<div class="col">
+				<div class="row justify-content-center align-items-center">
+					<a routerLink="/location" align="center"><img class="rounded_dash_img" src="../assets/images/icons/pin.png">
 						<br><small>Location</small>
 					</a>
 				</div>
@@ -24,7 +36,16 @@
 
 	<br>
 	<br>
-
+		<!--<div class="row">
+			<div class="col">
+				<div class="row justify-content-center align-items-center">
+					<a routerLink="/date"><img class="rounded dash_img" src="https://nielafloor.de/images/bilddaten/icons/calendar68.png">
+						<br><small>Date</small>
+					</a>
+				</div>
+			</div>
+		</div>-->	
+	</div>
 	<br>
 	<br>
 	<br>
@@ -41,3 +62,12 @@
 	<br>
 	<br>
 </div>
+
+
+
+  <!-- a *ngFor="let hero of heroes" class="col-1-4"
+      routerLink="/detail/{{hero.id}}">
+    <div class="module hero">
+      <h4>{{hero.name}}</h4>
+    </div>
+  </a -->
