--- a/src/app/agenda/agenda.component.css
+++ b/src/app/agenda/agenda.component.css
@@ -13,11 +13,13 @@
   }
 
   h3 {
- 
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
     color: white;
+    padding-top: 5px;
+    padding-bottom: 8px;
+    padding-left: 6px;
   }
   
