--- a/src/app/location/location.component.css
+++ b/src/app/location/location.component.css
@@ -13,6 +13,9 @@ h3 {
 	overflow: hidden;
 	background-color: #333;
 	color: white;
+	padding-top: 5px;
+  	padding-bottom: 8px;
+  	padding-left: 6px;
   }
 
 .btn-bwb {
