--- a/src/app/poll/poll.component.css
+++ b/src/app/poll/poll.component.css
@@ -18,6 +18,9 @@
         overflow: hidden;
         background-color: #333;
         color:white;
+        padding-top: 5px;
+        padding-bottom: 8px;
+        padding-left: 6px;
   }
 
 .pollbtn {
