--- a/src/app/purpose/purpose.component.css
+++ b/src/app/purpose/purpose.component.css
@@ -19,4 +19,7 @@
     overflow: hidden;
     background-color: #333;
     color: white;
+    padding-top: 5px;
+    padding-bottom: 8px;
+    padding-left: 6px;
   }
