--- a/src/app/rate-event/rate-event.component.css
+++ b/src/app/rate-event/rate-event.component.css
@@ -31,4 +31,7 @@ h3 {
   overflow: hidden;
   background-color: #333;
   color: white;
+  padding-top: 5px;
+  padding-bottom: 8px;
+  padding-left: 6px;
 }
