--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -2,7 +2,7 @@
 <div class="container">
 <h3>Agenda</h3>
 <br>
-<h4>Day 1 - Wednesday, 21 May 2019</h4>
+<h4>Day 1 - Tuesday, 21 May 2019</h4>
 <br>
 <ul class="list-group">
   <li class="list-group-item" data-toggle="collapse" data-target="#demo"><strong>8:00 - 8:30</strong> Arrival </li>
@@ -22,7 +22,7 @@
   	<!-- div id="demo3" class="collapse">
 		Lorem ipsum dolor text....
 	</div -->
-  <li class="list-group-item"><strong>9:30 - 10:00 </strong> Tea Break</li>
+  <li class="list-group-item"><strong>9:30 - 10:00 </strong> Break</li>
   <li class="list-group-item"><strong>10:00 - 12:00 </strong> Strategy X-Ray Session 1 Team 1 - 6 <br><i> Michael Barnard, Leon Gerber</i></li>
   <li class="list-group-item">
 <strong>12:00 - 13:00 </strong> Lunch Break
@@ -31,7 +31,7 @@
 <strong> 13:00 - 15:00 </strong> Strategy X-Ray Session 2 Team 7 - 11 <br><i> Michael Barnard, Leon Gerber</i>
 </li>
 <li class="list-group-item" style="background-color: black; color: white;text-align: center;"><strong> Arrival of Extended Team </strong></li>
-<li class="list-group-item"><strong> 15:00 - 15:30 </strong> Tea Break</li>
+<li class="list-group-item"><strong> 15:00 - 15:30 </strong> Break</li>
 <li class="list-group-item"><strong>
 15:30 - 16:30 </strong>  Innovation Gamification Exercise
 </li>
@@ -52,13 +52,13 @@
 </li>
   <li class="list-group-item"><strong>9:00 - 10:00 </strong> Lead From Here: How to create a can do culture <br> <i>Grant Driver</i></li>
   <li class="list-group-item"><strong>10:00 - 10:30 </strong> Change Agents <br> <i> Magdaleen Roode </i></li>
-  <li class="list-group-item"><strong>10:30 - 10:45 </strong> Tea Break <br></li>
+  <li class="list-group-item"><strong>10:30 - 10:45 </strong> Break <br></li>
   <li class="list-group-item"><strong>10:45- 12:00 </strong>BCX Strategic Aspirations <i> Lauren Du Preez, Michael Barnard  </i></li>
   <li class="list-group-item"><strong>12:00 - 13:00 </strong> Lunch Break <br></li>
   <li class="list-group-item"><strong>13:00 - 15:50 </strong>Team Building - 'The Big Picture' <br><i> Dream Team Catalyst</i></li>
-  <li class="list-group-item"><strong>15:50 - 16:00 </strong> Tea Break <br></li>
+  <li class="list-group-item"><strong>15:50 - 16:00 </strong> Break <br></li>
   <li class="list-group-item"><strong>16:00 - 17:00 </strong> Wrap up <br><i> Vish Rajpal</i></li>
-  <li class="list-group-item"><strong>17:00 </strong> Depature <br></li>
+  <li class="list-group-item"><strong>17:00 </strong> Departure <br></li>
 </ul>
 <br>
 <br>
