--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -3,6 +3,22 @@ body {
   
 }
 
+.btn {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  font-size: 30px;
+  font-family: Arial;
+  cursor: pointer;
+  height: 100px;
+  width: 200px;
+}
+
+.btn:hover {
+  background-color: grey;
+}
+
 .bg {
   /* The image used */
   background-image: url("../../assets/images/background/1.png");
