--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,20 +1,28 @@
 <div class="bg">
+	<head>
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	</head>
 	<div class="container">
 		<br>
 		<div class="row justify-content-center align-items-center">
 			
 			<img class="rounded" src="https://s3.us-east-2.amazonaws.com/itssesseion/logo.png">	
-
+			
 		</div>
 
+		<br>
+		<br>
+		<br>
+		<br>
 		<br>
 		<br>
 
 		<div class="row">
 			<div class="col">
 				<div class="row justify-content-center align-items-center">
-					<a routerLink="/purpose" align="center"><img class="rounded_dash_img" src="../assets/images/icons/info.png">
-						<br><small>About</small>
+					<a routerLink="/purpose" align="center"><button class="btn"><i class="fa fa-comment"></i> About</button>
+				<!--<br><small>About</small>-->
 					</a>
 				</div>
 			</div>
@@ -27,8 +35,8 @@
 		<div class="row">
 			<div class="col">
 				<div class="row justify-content-center align-items-center">
-					<a routerLink="/location" align="center"><img class="rounded_dash_img" src="../assets/images/icons/pin.png">
-						<br><small>Location</small>
+					<a routerLink="/location" align="center"><button class="btn"><i class="fa fa-map-marker"></i> Location</button>
+						<!--<br><small>Location</small>-->
 					</a>
 				</div>
 			</div>
@@ -46,21 +54,7 @@
 			</div>
 		</div>-->	
 	</div>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+	
 </div>
 
 
