--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -12,6 +12,22 @@
     background-size: cover;
   }
 
+  div.img-rounded, div.gallery {
+    margin: 5px;
+   /* border: 1px solid #ccc;*/
+    float: left;
+    width: 180px;
+  }
+  
+  div.img-rounded, div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.img-rounded img {
+    width: 100%;
+    height: auto;
+  }
+
 img {
   border-radius: 8px;
 }
