--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,4 +1,7 @@
 <div class="bg">
+	<head>
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+	</head>
 	<h3>Gallery</h3>
 	<br>
 	<h4>Share a memory! </h4>
@@ -14,10 +17,10 @@
 	</small>
 	<br><br>
 	<div *ngFor="let image of galleryImages" class="gallery">
-		<!--<a target="_blank" href="{{ image.imageUrl }}">-->
-			<div class="img-rounded"><img src= "{{ image.imageUrl }}"/>
-			</div>
-		<!--</a>-->
+		<a target="_blank" href="{{ image.imageUrl }}">
+			<!--<div class="img-rounded">--><img src= "{{ image.imageUrl }}" style="width:170px;height:170px;"/>
+			<!--</div>-->
+		</a>
 	</div>
 
 
