--- a/src/app/poll/poll.component.css
+++ b/src/app/poll/poll.component.css
@@ -45,9 +45,9 @@
     border-radius: 5px;
     background-color: white;
     padding: 20px;
-    margin-left: 10px;
+    /*margin-left: 10px;
     margin-right: 10px;
-    margin-top: 2px;
+    margin-top: 2px;*/
     opacity: 50%;
 }
 #cmntbox{
