--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -1,16 +1,16 @@
-.bg {
-    /* The image used */
+/*.bg {
+    /* The image used 
     background-image: url("../../assets/images/background/1.png");
   
-    /* Full height */
+    /* Full height 
     height: 100%;
     width: 100%;
   
-    /* Center and scale the image nicely */
+    /* Center and scale the image nicely 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
+  }*/
 
   div.gallery {
     margin: 5px;
