--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -18,12 +18,10 @@
 	<br><br>
 	<div *ngFor="let image of galleryImages" class="gallery">
 		<a target="_blank" href="{{ image.imageUrl }}">
-			<!--<div class="img-rounded">--><img src= "{{ image.imageUrl }}" style="width:170px;height:170px;"/>
+			<!--<div class="img-rounded">-->
+				<img src= "{{ image.imageUrl }}" style="width:180px;height:180px;"/>
 			<!--</div>-->
 		</a>
+		<br><br><br><br><br><br><br><br>
 	</div>
-
-
-	
-	<br>
 </div>
