--- a/src/app/purpose/purpose.component.html
+++ b/src/app/purpose/purpose.component.html
@@ -24,8 +24,8 @@
 </p>
    <div class="row">
     	<div class="col">     Thanks,<br>
-    Vish Rajpal <br>
-    Chief of IT Solutions </div>
+    <small><strong>Vish Rajpal</strong></small> <br>
+    <small><strong>Chief of IT Solutions</strong></small> </div>
     	<div class="col"> <img src="https://www.bcx.co.za/wp-content/uploads/2018/01/vish-rajpal-100x100.png"> </div>
     		
     </div>
