--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,10 +14,6 @@
 		<br>
 		<br>
 		<br>
-		<br>
-		<br>
-		<br>
-
 		<div class="row">
 			<div class="col">
 				<div class="row justify-content-center align-items-center">
@@ -30,38 +26,28 @@
 
 		<br>
 		<br>
-		<br>
 		
 		<div class="row">
 			<div class="col">
 				<div class="row justify-content-center align-items-center">
-					<a routerLink="/location" align="center"><button class="btn"><i class="fa fa-map-marker"></i> Location</button>
+					<a routerLink="/location" align="center"><button class="btn"><i class="fa fa-map-marker"></i> Venue</button>
 						<!--<br><small>Location</small>-->
 					</a>
 				</div>
 			</div>
+			
+			<br>
+		<br>
+		<br>
 		</div>
-
-	<br>
-	<br>
-		<!--<div class="row">
-			<div class="col">
-				<div class="row justify-content-center align-items-center">
-					<a routerLink="/date"><img class="rounded dash_img" src="https://nielafloor.de/images/bilddaten/icons/calendar68.png">
-						<br><small>Date</small>
-					</a>
-				</div>
-			</div>
-		</div>-->	
+	
+		<br>
+	
+		<br>
 	</div>
+
 	
 </div>
-
-
-
-  <!-- a *ngFor="let hero of heroes" class="col-1-4"
-      routerLink="/detail/{{hero.id}}">
-    <div class="module hero">
-      <h4>{{hero.name}}</h4>
-    </div>
-  </a -->
+		<br>
+		<br>
+		<br>
