--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -6,22 +6,13 @@
 <br>
 <ul class="list-group">
   <li class="list-group-item" data-toggle="collapse" data-target="#demo"><strong>8:00 - 8:30</strong> Arrival of ITS Leadership Team</li>
-  	<!-- div id="demo" class="collapse">
-		Lorem ipsum dolor text....
-	</div -->
   <li class="list-group-item" data-toggle="collapse" data-target="#demo2"><strong>8:30 - 8:40</strong> Welcome <br> <i>Elana Jacobus</i>
 </li>
   
   <li class="list-group-item" data-toggle="collapse" data-target="#demo2"><strong>8:40 - 9:00</strong> BCX Purpose and Values <br> <i>Vish Rajpal</i>
+</li>	
+    <li class="list-group-item" data-toggle="collapse" data-target="#demo3"><strong>9:00 - 9:20</strong> Strategy X-Ray Team 0 <br><i>Michael Barnard, Leon Gerber</i>
 </li>
-    	<!-- div id="demo2" class="collapse">
-		Lorem ipsum dolor text....
-	</div -->	
-    <li class="list-group-item" data-toggle="collapse" data-target="#demo3"><strong>9:00 - 9:20</strong> Strategy X-Ray Team 0 <i>Michael Barnard, Leon Gerber</i>
-</li>
-  	<!-- div id="demo3" class="collapse">
-		Lorem ipsum dolor text....
-	</div -->
   <li class="list-group-item"><strong>9:30 - 10:00 </strong> Tea Break</li>
   <li class="list-group-item"><strong>10:00 - 12:00 </strong> Strategy X-Ray Session 1 Team 1 - 6 <br><i> Michael Barnard, Leon Gerber</i></li>
   <li class="list-group-item">
@@ -33,12 +24,12 @@
 <li class="list-group-item" style="background-color: black; color: white;text-align: center;"><strong> Arrival of Extended Team </strong></li>
 <li class="list-group-item"><strong> 15:00 - 15:30 </strong>Tea Break</li>
 <li class="list-group-item"><strong>
-15:30 - 16:30 </strong>  Innovation Gamification Exercise <br><i> Elana Jacobus</i>
+15:30 - 16:30 </strong>  Escape From The Jungle <br><i> Elana Jacobus</i>
 </li>
 <li class="list-group-item" style="background-color: black; color: white;text-align: center;"><strong> Arrival of BCX Exco </strong></li>
 <li class="list-group-item"><strong>16:30 - 17:30 </strong> Accommodation Check-in 
 </li>
-<li class="list-group-item"><strong>17:30 - </strong> Dinner, Drinks & Networking 
+<li class="list-group-item"><strong>17:30 </strong> Dinner, Drinks & Networking 
 </li>
 </ul>
 <br>
@@ -50,10 +41,10 @@
   <li class="list-group-item">
 <strong>8:00 - 9:00 </strong> Breakfast
 </li>
-  <li class="list-group-item"><strong>9:00 - 10:00 </strong> Lead From Here: How to create a can do culture <br> <i>Grant Driver</i></li>
+  <li class="list-group-item"><strong>9:00 - 10:00 </strong> Lead From Here: <br>How to create a can do culture <br><i>Grant Driver</i></li>
   <li class="list-group-item"><strong>10:00 - 10:30 </strong> Change Agents <br> <i> Magdaleen Roode </i></li>
   <li class="list-group-item"><strong>10:30 - 10:45 </strong> Tea Break <br></li>
-  <li class="list-group-item"><strong>10:45- 12:00 </strong>BCX Strategic Aspirations <i> Lauren Du Preez, Michael Barnard  </i></li>
+  <li class="list-group-item"><strong>10:45- 12:00 </strong>BCX Strategic Aspirations <br><i> Lauren Du Preez, Michael Barnard  </i></li>
   <li class="list-group-item"><strong>12:00 - 13:00 </strong> Lunch Break <br></li>
   <li class="list-group-item"><strong>13:00 - 15:50 </strong>Team Building - 'The Big Picture' <br><i> Dream Team Catalyst</i></li>
   <li class="list-group-item"><strong>15:50 - 16:00 </strong> Break <br></li>
