--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
-<div class="bg container">
+<div class="bg">
 	<head>
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
-	<div class="container">
+	<div>
 		<br>
 		<div class="row justify-content-center align-items-center">
 			
@@ -14,7 +14,7 @@
 		<br>
 		<br>
 
-
+		<br>
 		<div class="row">
 			<div class="col">
 				<div class="row justify-content-center align-items-center">
@@ -42,14 +42,6 @@
 		<br>
 		</div>
 
-		<br>
-	
-		<br>
-
 	</div>
 
-	
 </div>
-	
-		<br>
-		<br>
