--- a/src/app/location/location.component.css
+++ b/src/app/location/location.component.css
@@ -42,7 +42,7 @@ h3 {
 	/*-moz-box-shadow:inset 0px 1px 0px 0px #f29c93;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #f29c93;
 	box-shadow:inset 0px 1px 0px 0px #f29c93;*/
-	background-color:#fe1a00;
+	background-color:#E21E2A;
 	border-radius:10px;
 	cursor:pointer;
 	color:#ffffff;
