--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <a routerLink="/heroes">Heroes</a>
 </nav -->
 
-<div class="container" style="height: 100%;">
+<div class="container-fluid" style="height: 100%;">
 	 <router-outlet (activate)="onActivate($event)"></router-outlet>
 </div>
   
