--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -11,7 +11,7 @@
   
   <li class="list-group-item" data-toggle="collapse" data-target="#demo2"><strong>8:40 - 9:00</strong> BCX Purpose and Values <br> <i>Vish Rajpal</i>
 </li>	
-    <li class="list-group-item" data-toggle="collapse" data-target="#demo3"><strong>9:00 - 9:20</strong> Strategy X-Ray Team 0 <br><i>Michael Barnard, Leon Gerber</i>
+    <li class="list-group-item" data-toggle="collapse" data-target="#demo3"><strong>9:00 - 9:20</strong> Strategy X-Ray Team 0 <br><!--<i>Michael Barnard, Leon Gerber</i>-->
 </li>
   <li class="list-group-item"><strong>9:30 - 10:00 </strong> Tea Break</li>
   <li class="list-group-item"><strong>10:00 - 12:00 </strong> Strategy X-Ray Session 1 Team 1 - 6 <br><i> Michael Barnard, Leon Gerber</i></li>
