--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,18 @@
 <div class="bg">
 	<div>
 		<br>
-		<div class="row justify-content-center align-items-center">
+		<!--<div class="row justify-content-center align-items-center">-->
 			
-			<img class="rounded" src="https://s3.us-east-2.amazonaws.com/itssesseion/logo.png">	
+			<img class="rounded" src="https://www.bcx.co.za/wp-content/uploads/2017/06/BCX_LOGO_CMYK_FC_2-01_wide.png">	
 			
-		</div>
+		<!--</div>-->
 
 		<br>
 		<br>
-
+		<br>
+		<br>
+		<br>
+		<br>
 		<br>
 		<div class="row">
 			<div class="col">
