--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,16 +5,28 @@
 			
 			<img class="rounded" src="https://www.bcx.co.za/wp-content/uploads/2017/06/BCX_LOGO_CMYK_FC_2-01_wide.png">	
 			
-		<!--</div>-->
-
+	
+		
 		<br>
 		<br>
 		<br>
+		<div>
+			<div class="col">
+				<div class="row justify-content-center align-items-center">
+					<h3 style="color: white; 
+					font-weight: bolder;
+					text-shadow: 2px 2px 4px #000000;">
+					ITS Strategic Breakaway</h3>
+				</div>
+				
+			</div>
+				
+		</div>
+		
 		<br>
 		<br>
 		<br>
-		<br>
-		<div class="row">
+			<div class="row">
 			<div class="col">
 				<div class="row justify-content-center align-items-center">
 					<a routerLink="/purpose" align="center"><button class="btn"><i class="fa fa-comment"></i> About</button>
@@ -23,7 +35,7 @@
 			</div>
 		</div>
 
-		<br>
+		
 		<br>
 		
 		<div class="row">
@@ -35,11 +47,24 @@
 				</div>
 			</div>
 			
+			
+		<br>
+		</div>
+		<br>
+		
+		<div class="row">
+			<div class="col">
+				<div class="row justify-content-center align-items-center">
+					<a routerLink="/feedback" align="center"><button class="btn"><i class="fa fa-quote-right"></i> Feedback</button>
+						<!--<br><small>Location</small>-->
+					</a>
+				</div>
+			</div>
+			
 			<br>
 		<br>
 		<br>
 		</div>
-
 	</div>
 
 </div>
