--- a/src/app/rate-event/rate-event.component.html
+++ b/src/app/rate-event/rate-event.component.html
@@ -2,7 +2,7 @@
 
 <h3>Strategy X-Ray</h3>
 <br>
-<div *ngIf = "Hero.team !== -1">
+<div *ngIf = "Hero.team !== -1 && status !== 1">
 	
 
 <h4>Currently reviewing : Team {{Hero.team}}</h4>
