--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -1,33 +1,17 @@
-/*.bg {
+.bg {
     /* The image used 
     background-image: url("../../assets/images/background/1.png");
-  
-    /* Full height 
-    height: 100%;
-    width: 100%;
-  
-    /* Center and scale the image nicely 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }*/
-
-  div.gallery {
-    margin: 5px;
-   /* border: 1px solid #ccc;*/
-    float: left;
-    width: 180px;
+  */
+      
+    height: 160%;
+    
   }
   
   /*div.gallery:hover {
     border: 1px solid #777;
   }*/
   
-  div.gallery img {
-    width: 100%;
-    height: auto;
-  }
-
+  
 img {
   border-radius: 5px;
 }
